--- a/meerkat/www/index.html
+++ b/meerkat/www/index.html
@@ -41,9 +41,10 @@
         <ion-nav-back-button class="button-icon icon ion-chevron-left">
           Back
         </ion-nav-back-button>  
-      </ion-nav-bar>  
-      <ion-content>
-      </ion-content>
+      </ion-nav-bar>
+
+      <ion-nav-view>
+      </ion-nav-view>
     </ion-pane>
   </body>
 </html>
