--- a/meerkat/www/index.html
+++ b/meerkat/www/index.html
@@ -33,7 +33,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-
+    <script src="js/ng-cordova-beacon.min.js"></script>
+    
   </head>
   <body ng-app="meerkat">
     <ion-pane>
