--- a/meerkat/android/www/index.html
+++ b/meerkat/android/www/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' data: gap: 'unsafe-eval'; style-src * 'self' 'unsafe-inline'; connect-src * 'self'; script-src * 'self' 'unsafe-inline'; media-src *">
-    <title>Meerkat</title>
+    <title></title>
 
     <link rel="manifest" href="manifest.json">
 
@@ -34,19 +33,20 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/ng-cordova-beacon.min.js"></script>
-    
   </head>
-  <body ng-app="meerkat">
-    <ion-pane>
-      <ion-nav-bar class="bar-stable nav-title-slide-ios7">
-        <ion-nav-back-button class="button-icon icon ion-chevron-left">
-          Back
-        </ion-nav-back-button>  
-      </ion-nav-bar>
-
-      <ion-nav-view>
-      </ion-nav-view>
-    </ion-pane>
+  <body ng-app="starter">
+    <!--
+      The nav bar that will be updated as we navigate between views.
+    -->
+    <ion-nav-bar class="bar-stable">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!--
+      The views will be rendered in the <ion-nav-view> directive below
+      Templates are in the /templates folder (but you could also
+      have templates inline in this html file if you'd like).
+    -->
+    <ion-nav-view></ion-nav-view>
   </body>
 </html>
